--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,11 @@
                   </div>            
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-2">
                   <button type="submit" class="btn btn-primary btn-lg px-4 gap-3">Say Hello</button>
-                </div>            
+                </div>      
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-2">
+                  <a href="/summaryupload" class="btn btn-primary btn-lg px-4 gap-3">Upload</a>
+                </div>  
+                
             </div>
         </form>
      </main>      
