--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-2">
                   <a href="/summaryupload" class="btn btn-primary btn-lg px-4 gap-3">Upload</a>
                 </div>  
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center my-2">
+                  <a href="/vision" class="btn btn-primary btn-lg px-4 gap-3">Vision</a>
+                </div>  
                 
             </div>
         </form>
